--- a/port.css
+++ b/port.css
@@ -213,8 +213,8 @@ span #gmail {
 }
 
 #emailHelp {
-    font-size: 11px;
-    color: blueviolet;
+    font-size: 10px;
+    color: #ffffff;
     margin: 0 5px;
     padding: 3px 0 0 0;
 }
